--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jorgenvatle/simpl-schema",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "A schema validation package that supports direct validation of MongoDB update modifier objects.",
   "author": "Eric Dobbertin <eric@dairystatedesigns.com>",
   "license": "MIT",
